add S3 credentials to development.rb

--- a/config/application.yml
+++ b/config/application.yml
@@ -7,3 +7,8 @@
 # STRIPE_PUBLIC_KEY: pk_BRgD57O8fHja9HxduJUszhef6jCyS
 TWITTER_CONSUMER_KEY: E89L3Wo8YZNElLuJDkeKLA
 TWITTER_CONSUMER_SECRET: ZAsjmz0RnM0a8JobS7nuZF48INO8cMPcUiEsT04SY
+
+#S3 Credentials
+S3_BUCKET_NAME: cclaiborne
+AWS_ACCESS_KEY_ID: AKIAITERNCTEJJDBDTTQ
+AWS_SECRET_ACCESS_KEY: 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
